# ChangeLog for sys-apps/coreutils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.153 2006/02/09 13:29:14 kumba Exp $

  09 Feb 2006; Joshua Kinard <kumba@gentoo.org> coreutils-5.2.1-r7.ebuild:
  Marked stable on mips for Bug #120125.

  29 Jan 2006; Chris PeBenito <pebenito@gentoo.org> coreutils-5.93.ebuild:
  Update SELinux patch for 5.93, fixes bug #120254.

  27 Jan 2006; Simon Stelling <blubb@gentoo.org> coreutils-5.2.1-r7.ebuild:
  stable on amd64

*coreutils-5.93 (25 Jan 2006)

  25 Jan 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-5.93.ebuild:
  Version bump #119794 by Daniel Drake.

  25 Jan 2006; Jose Luis Rivero <yoswink@gentoo.org>
  coreutils-5.2.1-r7.ebuild:
  Stable on alpha wrt #120125

  24 Jan 2006; Joseph Jezak <josejx@gentoo.org> coreutils-5.2.1-r7.ebuild:
  Marked ppc stable for bug #120125.

  24 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  coreutils-5.2.1-r7.ebuild:
  Stable on sparc wrt #120125

  24 Jan 2006; Chris White <chriswhite@gentoo.org>
  coreutils-5.2.1-r7.ebuild:
  x86 stable per bug #120125.

  24 Jan 2006; Markus Rothe <corsair@gentoo.org> coreutils-5.2.1-r7.ebuild:
  Stable on ppc64; bug #120125

*coreutils-5.3.0-r2 (05 Oct 2005)

  05 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  +coreutils-5.3.0-r2.ebuild:
  Fix uname parsing of cpuinfo on alpha/ia64 and use timestyle patch from
  upstream.

  13 Sep 2005; Mike Frysinger <vapier@gentoo.org> coreutils-5.3.0-r1.ebuild:
  Fix off-by-one issue #105639 by Michal Januszewski.

*coreutils-5.3.0-r1 (30 Aug 2005)

  30 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  +coreutils-5.3.0-r1.ebuild:
  Update the i18n patch to fix cut again as well as expand #104286 by peteru.

  30 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.3.0.ebuild:
  Remove charset.alias if it's present, only libiconv should install it.

*coreutils-5.3.0 (30 Aug 2005)
