@@ -1,0 +1,6 @@
+MD5 b583221c28c53c0e426b79be27a992ea coreutils-5.94-patches-1.0.tar.bz2 61167
+RMD160 69c7e0acd07d112c19238599de6ff7ce26da14d3 coreutils-5.94-patches-1.0.tar.bz2 61167
+SHA256 f6adb3d1444e00d154eaf752bd383d1b0a954578e038a7aa3bc18b087e275999 coreutils-5.94-patches-1.0.tar.bz2 61167
+MD5 11985c8345371546da8ff13f7efae359 coreutils-5.94.tar.bz2 5047523
+RMD160 c3620710beea1b8d604210bdec8fbe0a3da892ab coreutils-5.94.tar.bz2 5047523
+SHA256 5942f8ba08e0e2faf425d2c0dc62688b1253166c51b170ca1580db5a0b984d5c coreutils-5.94.tar.bz2 5047523
